Refactor LS package loader to load modules
Improve LS Package loader